@@ -1,3 +1,4 @@
+2344 [AVS Script Creator] + [OneClick] fixed memory leak when using autocrop. Bug #653
 2343 [x264] fixed wrong detection of errors if file name contains "error"
 2342 [OneClick] enhanced error handling
 
